--- a/adminlogin.html
+++ b/adminlogin.html
@@ -23,7 +23,7 @@
         
 		 </div>
 
-		 <form name myform action="index.html" method="post" onsubmit="return validate()">         <div class="login-box">
+		 <form name myform action="dashboard1.html" method="post" onsubmit="return validate()">         <div class="login-box">
          <img src= "neha1.jpg" class="avatar">
              <h1>Management Login</h1>
              <form>
